Add comment about why the RPi4 is still arm

--- a/fwup.conf
+++ b/fwup.conf
@@ -16,7 +16,7 @@ define(NERVES_FW_PRODUCT, "Nerves Firmware")
 define(NERVES_FW_DESCRIPTION, "")
 define(NERVES_FW_VERSION, "${NERVES_SDK_VERSION}")
 define(NERVES_FW_PLATFORM, "rpi4")
-define(NERVES_FW_ARCHITECTURE, "arm")
+define(NERVES_FW_ARCHITECTURE, "arm") # Not "aarch64" for historical reasons
 define(NERVES_FW_AUTHOR, "The Nerves Team")
 
 define(NERVES_FW_DEVPATH, "/dev/mmcblk0")
