--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -61,6 +61,7 @@ BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBP11=y
 BR2_PACKAGE_UNIXODBC=y
+BR2_PACKAGE_CAIRO=y
 BR2_PACKAGE_DTC=y
 BR2_PACKAGE_LIBCAMERA_V4L2=y
 BR2_PACKAGE_LIBCAMERA_PIPELINE_RASPBERRYPI=y
