Add wired driver to WPA Supplicant

--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -65,6 +65,7 @@ BR2_PACKAGE_DTC=y
 BR2_PACKAGE_LIBMNL=y
 BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_WPA_SUPPLICANT=y
+BR2_PACKAGE_WPA_SUPPLICANT_WIRED=y
 BR2_PACKAGE_WPA_SUPPLICANT_AP_SUPPORT=y
 BR2_PACKAGE_WPA_SUPPLICANT_MESH_NETWORKING=y
 BR2_PACKAGE_WPA_SUPPLICANT_AUTOSCAN=y
