--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,44 @@
-# The directory Mix will write compiled artifacts to.
+# Mix / Elixir build artifacts
 /_build/
-
-# If you run "mix test --cover", coverage assets end up here.
-/cover/
-
-# The directory Mix downloads your dependencies sources to.
-/deps/
-
-# Where 3rd-party dependencies like ExDoc output generated docs.
-/doc/
-
-# Ignore .fetch files in case you like to edit your project deps locally.
-/.fetch
-
-# If the VM crashes, it generates a dump, let's ignore it too.
+.cover/
+deps/
+doc/
+.fetch
 erl_crash.dump
-
-# Ignore our generated files
-/build.log
-/archive.log
 /.nerves
+
+# Buildroot and Nerves system outputs
+output/
+images/
+dl/
+tmp/
+build.log
+archive.log
+.br2-external.cache
+.br-deps/
+.br-external/
+
+# Kernel and build intermediates
+linux-*/.config.old
+linux-*/.tmp_versions/
+linux-*/Module.symvers
+linux-*/modules.order
+linux-*/built-in.a
+linux-*/System.map
+
+# Firmware bundles
+*.fw
+*.fw.zip
+*.img
+*.bin
+
+# IDE/editor noise
+*.swp
+*.swo
+*~
+.DS_Store
+.idea/
+.vscode/
+
+# Misc local experiments
+*.bak
