Cleanup of nerves_defconfig

--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -39,18 +39,19 @@ BR2_LINUX_KERNEL_CUSTOM_DTS_PATH="${NERVES_DEFCONFIG_DIR}/ramoops.dts"
 BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_NERVES_PATH}/board/nerves-common/busybox.config"
 
-# mutebox
-BR2_PACKAGE_LIBCEC_UTILS=y
+# HDMI-CEC and utilities
 BR2_PACKAGE_LIBCEC=y
-BR2_PACKAGE_ALSA_UTILS_ARECORD=y
-BR2_PACKAGE_CHROMAPRINT=y
-BR2_PACKAGE_FFTW=y
-BR2_PACKAGE_SOX=y
-
-# BR2_PACKAGE_V4L_UTILS=y
-# BR2_PACKAGE_V4L_UTILS_CEC_CTL=y
+BR2_PACKAGE_LIBCEC_UTILS=y
 BR2_PACKAGE_LIBV4L=y
 BR2_PACKAGE_LIBV4L_UTILS=y
+
+# audio tools
+BR2_PACKAGE_ALSA_UTILS_ARECORD=y
+BR2_PACKAGE_SOX=y
+BR2_PACKAGE_FFTW=y
+
+# audio fingerprinting
+BR2_PACKAGE_CHROMAPRINT=y
 
 BR2_PACKAGE_ALSA_UTILS=y
 # BR2_PACKAGE_ALSA_UTILS_ALSAMIXER is not set
