--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ permissions:
 jobs:
   get-br-dependencies:
     runs-on: ubuntu-22.04
+    env:
+      BR2_PRIMARY_SITE: https://sources.buildroot.net
+      BR2_DL_DIR: ${{ runner.temp }}/br_dl
     steps:
       - uses: actions/checkout@v4
       - uses: gridpoint-com/actions-nerves-system@v1
