Reverted fwup.conf changes

--- a/fwup.conf
+++ b/fwup.conf
@@ -13,8 +13,8 @@ file-resource fixup4.dat {
 file-resource start4.elf {
     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/start4x.elf"
 }
-file-resource config_txt {
-  host-path = "${FWUP_INCLUDE}/boot/config.txt"
+file-resource config.txt {
+    host-path = "${NERVES_SYSTEM}/images/config.txt"
 }
 file-resource cmdline.txt {
     host-path = "${NERVES_SYSTEM}/images/cmdline.txt"
@@ -132,8 +132,7 @@ task complete {
         uboot_setenv(uboot-env, "a.nerves_fw_uuid", "\${FWUP_META_UUID}")
     }
 
-
-    on-resource config_txt { fat_write(${BOOT_A_PART_OFFSET}, "config.txt") }
+    on-resource config.txt { fat_write(${BOOT_A_PART_OFFSET}, "config.txt") }
     on-resource cmdline.txt { fat_write(${BOOT_A_PART_OFFSET}, "cmdline.txt") }
     on-resource start4.elf { fat_write(${BOOT_A_PART_OFFSET}, "start4.elf") }
     on-resource fixup4.dat { fat_write(${BOOT_A_PART_OFFSET}, "fixup4.dat") }
@@ -214,7 +213,7 @@ task upgrade.a {
     # Write the new boot partition files and rootfs. The MBR still points
     # to the B partition, so an error or power failure during this part
     # won't hurt anything.
-    on-resource config_txt { fat_write(${BOOT_A_PART_OFFSET}, "config.txt") }
+    on-resource config.txt { fat_write(${BOOT_A_PART_OFFSET}, "config.txt") }
     on-resource cmdline.txt { fat_write(${BOOT_A_PART_OFFSET}, "cmdline.txt") }
     on-resource start4.elf { fat_write(${BOOT_A_PART_OFFSET}, "start4.elf") }
     on-resource fixup4.dat { fat_write(${BOOT_A_PART_OFFSET}, "fixup4.dat") }
@@ -303,7 +302,7 @@ task upgrade.b {
     # Write the new boot partition files and rootfs. The MBR still points
     # to the A partition, so an error or power failure during this part
     # won't hurt anything.
-    on-resource config_txt { fat_write(${BOOT_B_PART_OFFSET}, "config.txt") }
+    on-resource config.txt { fat_write(${BOOT_B_PART_OFFSET}, "config.txt") }
     on-resource cmdline.txt { fat_write(${BOOT_B_PART_OFFSET}, "cmdline.txt") }
     on-resource start4.elf { fat_write(${BOOT_B_PART_OFFSET}, "start4.elf") }
     on-resource fixup4.dat { fat_write(${BOOT_B_PART_OFFSET}, "fixup4.dat") }
