Added support for IQAudio Codec Zero

--- a/fwup.conf
+++ b/fwup.conf
@@ -92,6 +92,9 @@ file-resource pwm.dtbo {
 file-resource pwm1.dtbo {
     host-path = "${NERVES_SYSTEM}/images/rpi-firmware/overlays/pwm1.dtbo"
 }
+file-resource rpi-codeczero.dtbo {
+  host-path = "${NERVES_SYSTEM}/images/fwup_include/overlays/rpi-codeczero.dtbo"
+}
 
 file-resource rootfs.img {
     host-path = ${ROOTFS}
@@ -161,6 +164,7 @@ task complete {
     on-resource pwm-2chan.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/pwm-2chan.dtbo") }
     on-resource pwm.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/pwm.dtbo") }
     on-resource pwm1.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/pwm1.dtbo") }
+    on-resource rpi-codeczero.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/rpi-codeczero.dtbo") }
 
     on-resource rootfs.img {
         # write to the first rootfs partition
@@ -242,6 +246,7 @@ task upgrade.a {
     on-resource pwm-2chan.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/pwm-2chan.dtbo") }
     on-resource pwm.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/pwm.dtbo") }
     on-resource pwm1.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/pwm1.dtbo") }
+    on-resource rpi-codeczero.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/rpi-codeczero.dtbo") }
 
     on-resource rootfs.img {
         delta-source-raw-offset=${ROOTFS_B_PART_OFFSET}
@@ -331,6 +336,7 @@ task upgrade.b {
     on-resource pwm-2chan.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/pwm-2chan.dtbo") }
     on-resource pwm.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/pwm.dtbo") }
     on-resource pwm1.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/pwm1.dtbo") }
+    on-resource rpi-codeczero.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/rpi-codeczero.dtbo") }
 
     on-resource rootfs.img {
         delta-source-raw-offset=${ROOTFS_A_PART_OFFSET}
