--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -40,10 +40,12 @@ BR2_LINUX_KERNEL_NEEDS_HOST_OPENSSL=y
 BR2_PACKAGE_BUSYBOX_CONFIG="${BR2_EXTERNAL_NERVES_PATH}/board/nerves-common/busybox.config"
 
 # HDMI-CEC and utilities
-BR2_PACKAGE_LIBCEC=y
-BR2_PACKAGE_LIBCEC_UTILS=y
+# BR2_PACKAGE_LIBCEC=y
+# BR2_PACKAGE_LIBCEC_UTILS=y
 BR2_PACKAGE_LIBV4L=y
 BR2_PACKAGE_LIBV4L_UTILS=y
+BR2_PACKAGE_V4L_UTILS=y
+BR2_PACKAGE_V4L_UTILS_CEC_CTL=y
 
 # audio tools
 BR2_PACKAGE_ALSA_LIB=y
@@ -56,6 +58,11 @@ BR2_PACKAGE_FFTW=y
 
 # audio fingerprinting
 BR2_PACKAGE_CHROMAPRINT=y
+
+# enable scp
+BR2_PACKAGE_DROPBEAR=y
+BR2_PACKAGE_DROPBEAR_SCP=y
+BR2_PACKAGE_WHICH=y
 
 # BR2_PACKAGE_ALSA_UTILS_ALSAMIXER is not set
 
@@ -101,3 +108,4 @@ BR2_PACKAGE_RPICAM_APPS=y
 BR2_PACKAGE_RPI_DISTRO_FIRMWARE_NONFREE=y
 BR2_PACKAGE_RPI_LIBCAMERA_V4L2=y
 
+BR2_PACKAGE_NERVES_CONFIG_ACCEPT_RNG_NOTICE=y
