--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -109,3 +109,4 @@ BR2_PACKAGE_RPI_DISTRO_FIRMWARE_NONFREE=y
 BR2_PACKAGE_RPI_LIBCAMERA_V4L2=y
 
 BR2_PACKAGE_NERVES_CONFIG_ACCEPT_RNG_NOTICE=y
+BR2_PACKAGE_RPI_WS281X=y
