--- a/nerves_defconfig
+++ b/nerves_defconfig
@@ -64,6 +64,9 @@ BR2_PACKAGE_DROPBEAR=y
 BR2_PACKAGE_DROPBEAR_SCP=y
 BR2_PACKAGE_WHICH=y
 
+
+BR2_PACKAGE_ERLANG_28=y
+
 # BR2_PACKAGE_ALSA_UTILS_ALSAMIXER is not set
 
 BR2_PACKAGE_F2FS_TOOLS=y
