Moved mutebox-audio-in.dtbo to get it to deploy

--- a/fwup.conf
+++ b/fwup.conf
@@ -95,6 +95,9 @@ file-resource pwm1.dtbo {
 file-resource rpi-codeczero.dtbo {
   host-path = "${NERVES_SYSTEM}/images/fwup_include/overlays/rpi-codeczero.dtbo"
 }
+file-resource mutebox-audio-in.dtbo {
+    host-path = "${NERVES_SYSTEM}/images/mutebox-audio-in.dtb"
+}
 
 file-resource rootfs.img {
     host-path = ${ROOTFS}
@@ -165,6 +168,7 @@ task complete {
     on-resource pwm.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/pwm.dtbo") }
     on-resource pwm1.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/pwm1.dtbo") }
     on-resource rpi-codeczero.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/rpi-codeczero.dtbo") }
+    on-resource mutebox.audio-in.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/mutebox-audio-in.dtbo") }
 
     on-resource rootfs.img {
         # write to the first rootfs partition
@@ -247,6 +251,7 @@ task upgrade.a {
     on-resource pwm.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/pwm.dtbo") }
     on-resource pwm1.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/pwm1.dtbo") }
     on-resource rpi-codeczero.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/rpi-codeczero.dtbo") }
+    on-resource mutebox-audio-in.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/mutebox-audio-in.dtbo") }
 
     on-resource rootfs.img {
         delta-source-raw-offset=${ROOTFS_B_PART_OFFSET}
@@ -337,6 +342,7 @@ task upgrade.b {
     on-resource pwm.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/pwm.dtbo") }
     on-resource pwm1.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/pwm1.dtbo") }
     on-resource rpi-codeczero.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/rpi-codeczero.dtbo") }
+    on-resource mutebox-audio-in.dtbo { fat_write(${BOOT_B_PART_OFFSET}, "overlays/mutebox-audio-in.dtbo") }
 
     on-resource rootfs.img {
         delta-source-raw-offset=${ROOTFS_A_PART_OFFSET}
