--- a/fwup.conf
+++ b/fwup.conf
@@ -96,9 +96,8 @@ file-resource rpi-codeczero.dtbo {
   host-path = "${NERVES_SYSTEM}/images/fwup_include/overlays/rpi-codeczero.dtbo"
 }
 file-resource mutebox-audio-in.dtbo {
-    host-path = "${NERVES_SYSTEM}/images/mutebox-audio-in.dtb"
+    host-path = "${NERVES_SYSTEM}/images/fwup_include/overlays/mutebox-audio-in.dtbo"
 }
-
 file-resource rootfs.img {
     host-path = ${ROOTFS}
 
@@ -168,7 +167,7 @@ task complete {
     on-resource pwm.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/pwm.dtbo") }
     on-resource pwm1.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/pwm1.dtbo") }
     on-resource rpi-codeczero.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/rpi-codeczero.dtbo") }
-    on-resource mutebox.audio-in.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/mutebox-audio-in.dtbo") }
+    on-resource mutebox-audio-in.dtbo { fat_write(${BOOT_A_PART_OFFSET}, "overlays/mutebox-audio-in.dtbo") }
 
     on-resource rootfs.img {
         # write to the first rootfs partition
